--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
    <title>{% block title %}SIUUUESPORTS{% endblock %}</title>
 
     <!-- CSS -->
+    <link rel='stylesheet' id='overworld-edge-modules-css' href='{{ asset('wp-content/themes/overworld/assets/css/modules.min1eb7.css?ver=6.0.3') }}' type='text/css' media='all' />
     <link href="{{ asset('front_office/assets/css/fonts/etline-font.min.css') }}" rel="stylesheet">
     <link href="{{ asset('front_office/assets/css/fonts/fontawesome/all.min.css')}}" rel="stylesheet">
     <link href="{{ asset('front_office/assets/css/fonts/pe-icon-7-stroke.css ')}}" rel="stylesheet">
@@ -322,6 +323,7 @@
 
 <!-- Main JS -->
 <script src="front_office/assets/js/main.js" id="_mainJS" data-plugins="load"></script>
+
 </body>
 
 <!-- Mirrored from scanthemes.com/demo/HTML/wicodus/main.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Feb 2023 16:06:20 GMT -->
